Admin Panel Dashboard config

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -26,6 +26,11 @@ footer{
   margin-top: auto;
 }
 
+// DASHBOARD ADMIN
+.dashboard-card-link {
+  text-decoration: none;
+}
+
 // LOGIN FORM
 .custom-form{
   border-radius: 15px;
