--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-warning px-5">
+<nav class="navbar navbar-expand-lg bg-primary px-5">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ path('app_dashboard') }}">
       <img src="{{ asset('build/images/logo_white.png')}}" alt="Today Fit Logo" width="150px">
@@ -20,15 +20,16 @@
         </li>
       {# {% endif %} #}
       </ul>
+
       <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown me-3">
           {{ app.user ? app.user.userIdentifier : 'Please Login' }}
         </li>
         <li class="nav-item dropdown">
-          <button type="button" class="btn btn-a nav-a py-2 px-0 px-lg-2 dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="true" data-bs-display="static">
+          <button type="button" class="btn btn-primary nav-a py-2 px-0 px-lg-2 dropdown-toggle show" data-bs-toggle="dropdown" aria-expanded="true" data-bs-display="static">
             <i class="bi bi-person-circle mx-2 text-dark" style="font-size: 2rem;"></i>
           </button>
-          <ul class="dropdown-menu dropdown-menu-end" data-bs-popper="static">
+          <ul class="dropdown-menu dropdown-menu-end bg-primary" data-bs-popper="static">
             {% if app.user  %}
               {% if app.user.roles[0] == "ROLE_ADMIN" %}
                 <li><a href="{{ path('app_register') }}" class="dropdown-item">Registrer Utilisateur</a></li>
