--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -4,60 +4,63 @@
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
+    {% if partner %}
+      <div class="d-flex flex-row align-items-center justify-content-between">
+        <h1>{{ partner.Name }}</h1>
+      
+        {% if is_granted("ROLE_ADMIN") %}
+          {{ include('partner/_delete_form.html.twig') }}
+        {% endif %}
+      
+      </div>
+      <table class="table">
+          <tbody>
+              <tr>
+                  <th>Id</th>
+                  <td>{{ partner.id }}</td>
+              </tr>
+              <tr>
+                  <th>Name</th>
+                  <td>{{ partner.Name }}</td>
+              </tr>
+              <tr>
+                  <th>Email</th>
+                  <td>{{ partner.Email }}</td>
+              </tr>
+              <tr>
+                  <th>Address</th>
+                  <td>{{ partner.Address }}</td>
+              </tr>
+              <tr>
+                  <th>Permissions</th>
+                  <td class="d-flex gap-2 text-success">
+                    {% for permission in partner.permissions %}
+                      <small class="border border-success px-2 py-1 rounded"> {{ permission.name }} </small>
+                    {% endfor %}
+                  </td>
+              </tr>
+              <tr>
+                  <th>Active</th>
+                  <td>
+                    {% if partner.Active %}
+                      <span class="border border-success px-2 py-1 rounded text-success">Oui</span>
+                    {% else %}
+                      <span class="border border-danger px-2 py-1 rounded text-danger">Non</span>
+                    {% endif %}
+                  </td>
+              </tr>
 
-    <div class="d-flex flex-row align-items-center justify-content-between">
-      <h1>{{ partner.Name }}</h1>
-    
+          </tbody>
+      </table>
+      
       {% if is_granted("ROLE_ADMIN") %}
-        {{ include('partner/_delete_form.html.twig') }}
+        <section class="container d-grid gap-2 col-xl-6">
+          <a href="{{ path('app_partner_edit', {'id': partner.id}) }}" class="btn btn-primary">Modifier</a>
+          <a href="{{ path('app_partner_index') }}" class="btn btn-warning">Liste des Structures</a>
+        </section>
       {% endif %}
-    
-    </div>
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ partner.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ partner.Name }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ partner.Email }}</td>
-            </tr>
-            <tr>
-                <th>Address</th>
-                <td>{{ partner.Address }}</td>
-            </tr>
-            <tr>
-                <th>Permissions</th>
-                <td class="d-flex gap-2 text-success">
-                  {% for permission in partner.permissions %}
-                    <small class="border border-success px-2 py-1 rounded"> {{ permission.name }} </small>
-                  {% endfor %}
-                </td>
-            </tr>
-            <tr>
-                <th>Active</th>
-                <td>
-                  {% if partner.Active %}
-                    <span class="border border-success px-2 py-1 rounded text-success">Oui</span>
-                  {% else %}
-                    <span class="border border-danger px-2 py-1 rounded text-danger">Non</span>
-                  {% endif %}
-                </td>
-            </tr>
-
-        </tbody>
-    </table>
-    
-    {% if is_granted("ROLE_ADMIN") %}
-      <section class="container d-grid gap-2 col-xl-6">
-        <a href="{{ path('app_partner_edit', {'id': partner.id}) }}" class="btn btn-primary">Modifier</a>
-        <a href="{{ path('app_partner_index') }}" class="btn btn-warning">Liste des Structures</a>
-      </section>
+    {% else %}
+      <h2>Vous n'avez pas de Structure</h2>
     {% endif %}
 
 </section>
