--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -3,55 +3,54 @@
 {% block title %}Partner{% endblock %}
 
 {% block body %}
-<section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
+<section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form mb-5">
     {% if partner %}
-      <div class="d-flex flex-row align-items-center justify-content-between">
-        <h1>{{ partner.Name }}</h1>
-      
-        {% if is_granted("ROLE_ADMIN") %}
+      {% if is_granted("ROLE_ADMIN") %}
+        <div class="d-flex flex-row align-items-center justify-content-between">
+          <h1 class="text-center">{{ partner.Name }}</h1>
           {{ include('partner/_delete_form.html.twig') }}
-        {% endif %}
-      
+        </div>
+      {% endif %}
+      <div class="text-center">
+        <h1>{{ partner.Name }}</h1>
       </div>
-      <table class="table">
-          <tbody>
-              <tr>
-                  <th>Id</th>
-                  <td>{{ partner.id }}</td>
-              </tr>
-              <tr>
-                  <th>Name</th>
-                  <td>{{ partner.Name }}</td>
-              </tr>
-              <tr>
-                  <th>Email</th>
-                  <td>{{ partner.Email }}</td>
-              </tr>
-              <tr>
-                  <th>Address</th>
-                  <td>{{ partner.Address }}</td>
-              </tr>
-              <tr>
-                  <th>Permissions</th>
-                  <td class="d-flex gap-2 text-success">
-                    {% for permission in partner.permissions %}
-                      <small class="border border-success px-2 py-1 rounded"> {{ permission.name }} </small>
-                    {% endfor %}
-                  </td>
-              </tr>
-              <tr>
-                  <th>Active</th>
-                  <td>
-                    {% if partner.Active %}
-                      <span class="border border-success px-2 py-1 rounded text-success">Oui</span>
-                    {% else %}
-                      <span class="border border-danger px-2 py-1 rounded text-danger">Non</span>
-                    {% endif %}
-                  </td>
-              </tr>
-
-          </tbody>
-      </table>
+      <div class="overflow image-container text-center partner-card-container mb-2">
+        <img src="{{ partner.image }}" alt="Today Fit Franchise" width="350px" class="partner-card-show">
+      </div>
+      <article class="partner-show-article">
+        <div class="d-flex border-bottom p-1">
+          <p class="partner-show-fields"><b>Id:</b></p>
+          <p>{{ partner.id }}</p>
+        </div>
+        <div class="d-flex border-bottom p-1">
+          <p class="partner-show-fields"><b>Nom:</b></p>
+          <p>{{ partner.Name }}</p>
+        </div>
+        <div class="d-flex border-bottom p-1">
+          <p class="partner-show-fields"><b>Email:</b></p>
+          <p>{{ partner.Email }}</p>
+        </div>
+        <div class="d-flex border-bottom p-1">
+          <p class="partner-show-fields"><b>Adresse:</b></p>
+          <p>{{ partner.Address }}</p>
+        </div>
+        <div class="d-flex border-bottom p-1">
+          <p class="partner-show-fields"><b>Active:</b></p>
+          {% if partner.Active %}
+            <span class="border border-success bg-success text-white px-2 py-1 rounded text-success">Oui</span>
+          {% else %}
+            <span class="border border-danger bg-danger text-white px-2 py-1 rounded text-danger">Non</span>
+          {% endif %}
+        </div>
+        <div class="border-bottom p-1">
+          <p class="partner-show-fields col-12"><b>Permissions:</b></p>
+          <div class="row justify-content-center">
+            {% for permission in partner.permissions %}
+              <small class="col-5 text-center border border-success bg-success text-white px-2 py-1 m-1 rounded"> {{ permission.name }} </small>
+            {% endfor %}
+          </div>
+        </div>
+      </article>
       
       {% if is_granted("ROLE_ADMIN") %}
         <section class="container d-grid gap-2 col-xl-6">
