franshise show page updated

--- a/templates/franchise/show.html.twig
+++ b/templates/franchise/show.html.twig
@@ -64,7 +64,7 @@
     {# < Card Content section #}
     <section class='container card-section my-5'>
       <div class="row d-flex justify-content-center">
-        <div class='d-flex flex-column flex-xl-row justify-content-md-between align-items-center mb-4'>
+        <div class='d-flex flex-column flex-xl-row justify-content-center align-items-center mb-4'>
           
           <div class='d-flex flex-column flex-sm-row mb-sm-3'>
             <h2 class="fw-bold lh-1 mb-0 mb-md-0 me-md-3 text-uppercase mb-2 me-4">MES CLUBS</h2>
