--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Partner index{% endblock %}
 
 {% block body %}
-    <div>
+    {# <div>
       {{ form(form) }}
-    </div>
+    </div> #}
 
     {# Header section #}
     <section class="d-flex flex-row justify-content-between align-items-center">
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="d-flex flex-column flex-lg-row search-form-partner">
-                  {# {{ form(form) }} #}
+                  {{ form(form) }}
                 </div>
 
               </div>
