--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -51,8 +51,9 @@
                 </div>
 
                 <div class="d-flex flex-column flex-lg-row search-form-partner">
-                  {{ form(form) }}
+                  {{ include('partner/_formSearch.html.twig') }}
                 </div>
+                
 
               </div>
 
