--- a/templates/franchise/_formSearch.html.twig
+++ b/templates/franchise/_formSearch.html.twig
@@ -16,7 +16,7 @@
           {{ form_widget(form.Chercher) }}
       </div>
       <div class="col-3 col-lg-2 col-xl-1">
-        <a class="btn btn-outline-danger btn-reset" href="{{ path('app_partner_index') }}"><b>X</b></a>
+        <a class="btn btn-outline-danger btn-reset" href="{{ path('app_franchise_index') }}"><b>X</b></a>
       </div>
       {{ form_rest(form) }}
     </div>
