--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -56,8 +56,11 @@
                   'description': franchise.description,
                   'link': link
                   }) }}
+              {% else %}
+                <div class="alert alert-danger" role="alert">
+                  Il n'y a pas de resultat pour votre recherche
+                </div>
               {% endfor %}
-
             </div>
           </section>
           {# > Card Content section #}
