Dark Mode disabled by commenting code

--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -55,14 +55,16 @@
           </ul>
         </li>
       </ul>
-      <section class="mx-2">
+      {# < DARK MODE #}
+      {# <section class="mx-2">
         <div class="dark-mode" data-mode="dark" id="moon">
           <i class="bi bi-moon-fill"></i>
         </div>
         <div class="dark-mode hidden-icon" data-mode="light" id="sun">
           <i class="bi bi-brightness-high-fill"></i>
         </div>
-      </section>
+      </section> #}
+      {# > DARK MODE #}
     </div>
   </div>
 </nav>
