Franchise css bug fixed

--- a/templates/franchise/index.html.twig
+++ b/templates/franchise/index.html.twig
@@ -33,7 +33,7 @@
           {# < Card Content section #}
           <section class='container card-section my-5'>
             <div class="row">
-              <div class='d-flex flex-column flex-md-row justify-content-md-between align-items-center mb-4'>
+              <div class='d-flex flex-column flex-xl-row justify-content-md-between align-items-center mb-4'>
                 
                 <div class='d-flex col-12 col-lg-5 flex-sm-row justify-content-center justify-content-lg-start mb-sm-2 mb-md-3 mb-xl-0'>
                   <h2 class="fw-bold lh-1 mb-0 me-md-3 text-uppercase mb-2 me-4">MES CLUBS</h2>
