add utilisateurs link to navBar

--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -45,7 +45,7 @@
                 
               </div>
 
-              {% set link = "/partner/show/" %}
+              {% set link = "/structure/show/" %}
               {% for partner in partners %}
                 {{ include('partner/_card.html.twig', {
                   'button_label': 'Go!',
