--- a/templates/_nav.html.twig
+++ b/templates/_nav.html.twig
@@ -19,6 +19,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="{{ path('app_permission_index') }}">Permissions</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="{{ path('app_user_index') }}">Utilisateurs</a>
+          </li>
         {% endif %}
         {% if app.user and app.user.roles[0] == "ROLE_FRANCHISE" %}
           <li class="nav-item">
