Works well on prod

--- a/templates/franchise/show.html.twig
+++ b/templates/franchise/show.html.twig
@@ -60,18 +60,16 @@
       
   </section>
 
-  <section class="container border border-primary py-4 px-4 custom-form mt-3 mb-5">
+  <section class="container border border-primary py-4 px-4  mt-3 mb-5">
     {# < Card Content section #}
     <section class='container card-section my-5'>
       <div class="row d-flex justify-content-center">
         <div class='d-flex flex-column flex-xl-row justify-content-center align-items-center mb-4'>
-          <div class='d-flex flex-column flex-sm-row mb-sm-3'>
-            <h2 class="fw-bold lh-1 mb-0 mb-md-0 me-md-3 text-uppercase mb-2 me-4">MES CLUBS</h2>
-            <h2 class="fw-bold lh-1 mb-4 mb-sm-0 text-uppercase strokeme">TODAYFIT</h2>
+          <div class='d-flex col-12 col-xl-5 flex-sm-row justify-content-center justify-content-xl-start mb-sm-2 mb-md-3 mb-xl-0'>
+            <h2 class="fw-bold lh-1 mb-0 me-md-3 text-uppercase mb-2 me-4 fs-1">MES CLUBS</h2>
+            <h2 class="fw-bold lh-1 mb-4 mb-sm-0 text-uppercase strokeme fs-1">TODAYFIT</h2>
           </div>
-        </div>
-        <div>
-          <div class="col-12 form-search">
+          <div class="col-12 col-xl-7 form-search">
             {{ include('franchise/_formSearchMaFranchise.html.twig') }}
           </div>
         </div>
