--- a/templates/franchise/_formSearchMaFranchise.html.twig
+++ b/templates/franchise/_formSearchMaFranchise.html.twig
@@ -6,10 +6,10 @@
     {# <button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button> #}
 
     <div class="row d-flex flex-wrap justify-content-between">
-      <div class="col-9 col-lg-6 col-xl-7">
+      <div class="col-9 col-lg-6 col-xl-7 mb-2">
           {{ form_widget(form.input_data) }}
       </div>
-      <div class="col-3 col-lg-2" id="search_partner">
+      <div class="col-3 col-lg-2 mb-2" id="search_partner">
           {{ form_widget(form.active) }}
       </div>
       <div class="col-9 col-lg-2">
