Several pages from FE updated

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -87,18 +87,13 @@ form fieldset{
 #franchise_edit_permissions,
 #partner_edit_permissions,
 #registration_form_roles,
-// #search_partner,
+#user_roles,
 .custom-active-check {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
-#search_partner,
-.custom-active-check {
-  // display: flex;
-  // flex-direction: row;
-  // flex-wrap: wrap;
-}
+
 #partner_permissions input[type="checkbox"],
 #franchise_permissions input[type="checkbox"],
 #franchise_edit_permissions input[type="checkbox"],
@@ -108,7 +103,8 @@ form fieldset{
 #franchise_edit_Active,
 #partner_edit_Active,
 #partner_Active,
-#franchise_Active {
+#franchise_Active,
+#user_roles input[type="checkbox"] {
     visibility: hidden;
 }
 
@@ -121,8 +117,9 @@ form fieldset{
 #franchise_Active,
 #partner_edit_Active,
 #partner_Active,
+#user_roles input[type="checkbox"] + label,
 .custom-active-check {
-    background-color: white; /* Green */
+    background-color: white;
     border: 1px solid #ced4da;
     color: #ced4da;
     padding: 5px 10px;
@@ -134,7 +131,7 @@ form fieldset{
 }
 
 #search_partner input[type="checkbox"] + label {
-  background-color: white; /* Green */
+  background-color: white;
   border: 1px solid #ced4da;
   color: #ced4da;
   padding: 5px 10px;
@@ -154,8 +151,9 @@ form fieldset{
 #franchise_edit_Active[type="checkbox"]:checked + label,
 #franchise_Active[type="checkbox"]:checked + label,
 #partner_edit_Active[type="checkbox"]:checked + label,
-#partner_Active[type="checkbox"]:checked + label{
-    background-color: #4CAF50; /* Green */
+#partner_Active[type="checkbox"]:checked + label,
+#user_roles input[type="checkbox"]:checked + label{
+    background-color: #4CAF50;
     border: none;
     color: white;
 }
@@ -275,7 +273,11 @@ form fieldset{
 }
 
 .partner-show-fields{
-  width: 150px;
+  width: 180px;
+}
+
+.user-table-fields{
+  //width: 200px;
 }
 
 // LEGAL DOCS
