--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
     <body data-theme="light">
 
           {# Header #}
-          <div class="container-fluid bg-warning text-center py-1"><small><i>Ce site web est une site de démonstration</i></small></div>
+          <div class="container-fluid bg-warning text-center py-1"><small><i>Ce site web est un site demo</i></small></div>
           {{ include('_nav.html.twig') }} 
 
           {# Messages #}
