--- a/templates/franchise/show_admin.html.twig
+++ b/templates/franchise/show_admin.html.twig
@@ -6,57 +6,58 @@
 {% if franchise != null %}
   <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
 
+    {% if is_granted("ROLE_ADMIN") %}
       <div class="d-flex flex-row align-items-center justify-content-between">
-        <h1>{{ franchise.name }}</h1>
-        
-        {% if is_granted("ROLE_ADMIN") %}
-          {{ include('franchise/_delete_form.html.twig') }}
-        {% endif %}
-        
+        <h1 class="text-center">{{ franchise.Name }}</h1>
+        {{ include('franchise/_delete_form.html.twig') }}
       </div>
-      <table class="table">
-          {# <img src="https://images.pexels.com/photos/7676548/pexels-photo-7676548.jpeg" class="card-img-top" alt="today fit"> #}
-          <tbody>
-              <tr>
-                  <th>Id</th>
-                  <td>{{ franchise.id }}</td>
-              </tr>
-              <tr>
-                  <th>Nom</th>
-                  <td>{{ franchise.Name }}</td>
-              </tr>
-              <tr>
-                  <th>E-mail</th>
-                  <td>{{ franchise.Email }}</td>
-              </tr>
-              <tr>
-                  <th>Permissions</th>
-                  <td>
-                    {% for permission in franchise.permissions %}
-                      <small class="border border-success px-2 py-1 rounded"> {{ permission.name }} </small>
-                    {% endfor %}
-                  </td>
-              </tr>
-              <tr>
-                  <th>Active?</th>
-                  <td>
-                    {% if franchise.Active %}
-                      <span class="border border-success px-2 py-1 rounded text-success">Oui</span>
-                    {% else %}
-                      <span class="border border-danger px-2 py-1 rounded text-danger">Non</span>
-                    {% endif %}
-                  </td>
-              </tr>
+    {% else %}
+      <div class="text-center">
+        <h1>{{ franchise.Name }}</h1>
+      </div>
+    {% endif %}
+    <div class="overflow image-container text-center partner-card-container mb-2">
+      <img src="{{ franchise.image }}" alt="Today Fit Franchise" width="350px" class="partner-card-show">
+    </div>
 
-          </tbody>
-      </table>
+    <article class="partner-show-article">
+      <div class="d-flex border-bottom p-1">
+        <p class="partner-show-fields"><b>Id:</b></p>
+        <p>{{ franchise.id }}</p>
+      </div>
+      <div class="d-flex border-bottom p-1">
+        <p class="partner-show-fields"><b>Nom:</b></p>
+        <p>{{ franchise.Name }}</p>
+      </div>
+      <div class="d-flex border-bottom p-1">
+        <p class="partner-show-fields"><b>Email:</b></p>
+        <p>{{ franchise.Email }}</p>
+      </div>
 
-      {% if is_granted("ROLE_ADMIN") %}
-        <section class="container d-grid gap-2 col-xl-6">
-          <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}" class="btn btn-primary">Modifier</a>
-          <a href="{{ path('app_franchise_index') }}" class="btn btn-outline-primary">Liste des Franchises</a>
-        </section>
-      {% endif %}
+      <div class="d-flex border-bottom p-1">
+        <p class="partner-show-fields"><b>Active:</b></p>
+        {% if franchise.Active %}
+          <span class="border border-success bg-success text-white px-2 py-1 rounded text-success">Oui</span>
+        {% else %}
+          <span class="border border-danger bg-danger text-white px-2 py-1 rounded text-danger">Non</span>
+        {% endif %}
+      </div>
+      <div class="border-bottom p-1">
+        <p class="partner-show-fields col-12"><b>Permissions:</b></p>
+        <div class="row justify-content-center">
+          {% for permission in franchise.permissions %}
+            <small class="col-5 text-center border border-success bg-success text-white px-2 py-1 m-1 rounded"> {{ permission.name }} </small>
+          {% endfor %}
+        </div>
+      </div>
+    </article>
+
+    {% if is_granted("ROLE_ADMIN") %}
+      <section class="container d-grid gap-2 col-xl-6 mt-3">
+        <a href="{{ path('app_franchise_edit', {'id': franchise.id}) }}" class="btn btn-primary">Modifier</a>
+        <a href="{{ path('app_franchise_index') }}" class="btn btn-warning">Liste des Franchises</a>
+      </section>
+    {% endif %}
       
   </section>
 
