--- a/templates/partner/show.html.twig
+++ b/templates/partner/show.html.twig
@@ -39,7 +39,11 @@
             <p>{{ partner.Name }}</p>
           </div>
           <div class="d-flex border-bottom p-1">
-            <p class="partner-show-fields"><b>Email:</b></p>
+            <p class="partner-show-fields"><b>Email Professionnel:</b></p>
+            <p>{{ partner.user.Email }}</p>
+          </div>
+          <div class="d-flex border-bottom p-1">
+            <p class="partner-show-fields"><b>Email Personnel:</b></p>
             <p>{{ partner.Email }}</p>
           </div>
           <div class="d-flex border-bottom p-1">
@@ -51,7 +55,12 @@
             {% if partner.Active and partner.franchise.active %}
               <span class="border border-success bg-success text-white px-2 py-1 rounded text-success">Oui</span>
             {% else %}
-              <span class="border border-danger bg-danger text-white px-2 py-1 rounded text-danger">Non</span>
+              {% if partner.Active %}
+                <span class="border border-danger bg-danger text-white px-2 py-1 rounded text-danger">Non</span>
+                <small class="mx-5 text-danger">Attention! La Franchise n'est pas active. Nous avons desactivé la Structure.</small>
+              {% else %}
+                <span class="border border-danger bg-danger text-white px-2 py-1 rounded text-danger">Non</span>
+              {% endif %}
             {% endif %}
           </div>
           <div class="border-bottom p-1">
