Javascript added to load the image dynamically on Permission Edit and New

--- a/templates/permission/index.html.twig
+++ b/templates/permission/index.html.twig
@@ -27,7 +27,7 @@
                   <td>{{ permission.id }}</td>
                   <td>{{ permission.name }}</td>
                   <td>
-                    <img src="{{ permission.image }}" alt="Today Fit Structure" width="20px" class="">
+                    <img src="{{ permission.image }}" alt="Today Fit Permission" width="20px" class="">
                   </td>
                   <td>
                       <a href="{{ path('app_permission_edit', {'id': permission.id}) }}" class="btn btn-sm btn-outline-info">Modifier</a>
