--- a/templates/permission/edit.html.twig
+++ b/templates/permission/edit.html.twig
@@ -4,8 +4,10 @@
 
 {% block body %}
 <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
-
-    <h1>Editer Permission</h1>
+    <div class="d-flex flex-row col-12">
+      <h1 class="col-10">Editer Permission</h1>
+      <img src="https://www.svgrepo.com/show/340721/no-image.svg" alt="Today Fit Permission Image" width="50px" class="col-2" id="permission-image">
+    </div>
 
     {{ include('permission/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
     {{ include('permission/_delete_form.html.twig') }}
@@ -13,4 +15,15 @@
     <a href="{{ path('app_permission_index') }}" class="btn btn-warning">Retourner à la liste</a>
 
 </section>
+{% endblock %}
+
+{% block javascripts %}
+  <script>
+    window.onload = (event) => {
+      let input = document.getElementById('permission_image')
+      console.log(input.value)
+      let image = document.getElementById('permission-image')
+      image.src = input.value
+    }
+  </script>
 {% endblock %}
