--- a/templates/permission/new.html.twig
+++ b/templates/permission/new.html.twig
@@ -5,10 +5,39 @@
 {% block body %}
 <section class="container col-md-8 col-xl-6 border border-primary py-4 px-4 custom-form">
 
-    <h1>Nouvelle Permission</h1>
+    <div class="d-flex flex-row col-12">
+      <h1 class="col-10">Nouvelle Permission</h1>
+      <img src="https://www.svgrepo.com/show/340721/no-image.svg" alt="Today Fit Permission Image" width="50px" class="col-2" id="permission-new-image">
+    </div>
 
     {{ include('permission/_form.html.twig') }}
 
     <a href="{{ path('app_permission_index') }}" class="my-3 btn btn-outline-primary">Retourner à la liste</a>
 </section>
+{% endblock %}
+
+{% block javascripts %}
+  <script>
+    window.onload = (event) => {
+      let input = document.getElementById('permission_image')
+      console.log(input.value)
+      let image = document.getElementById('permission-new-image')
+      console.log(image)
+      input.addEventListener("keyup", function(){
+        checkIfImgExists(image)
+        image.src = input.value
+      })
+    }
+
+    const checkIfImgExists = (image) => {
+      const imageNotFound = () => {
+        let newImage = document.getElementById('permission-new-image')
+        newImage.src = "https://www.svgrepo.com/show/340721/no-image.svg"
+      };
+
+      const img = new Image()
+      img.onerror = imageNotFound;
+      img.src = image.src;
+    }
+  </script>
 {% endblock %}
