--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -6,7 +6,7 @@
     <li class="nav-item"><a href="{{ path('app_legal_code') }}" class="nav-link px-2 text-muted">Mentions Légales</a></li>
     <li class="nav-item"><a href="{{ path('app_legal_conditions') }}" class="nav-link px-2 text-muted">Conditions Générales</a></li>
     <span class="nav-link px-2 text-muted mx-3">|</span>
-    <li class="nav-item"><a href="https://www.todayfit.fr" class="nav-link px-2 text-muted">Public Website</a></li>
+    <li class="nav-item"><a href="https://www.todayfit.fr" target="_blank" class="nav-link px-2 text-muted">Public Website</a></li>
   </ul>
   <p class="text-center text-muted">© 2022 TodayFit</p>
 </footer>
