email in partner card updated

--- a/templates/partner/index.html.twig
+++ b/templates/partner/index.html.twig
@@ -55,6 +55,7 @@
                   'image': partner.image,
                   'description': partner.description,
                   'link': link,
+                  'email': partner.email
                   }) }}
               {% else %}
                 <div class="alert alert-danger" role="alert">
