--- a/templates/partner/_card.html.twig
+++ b/templates/partner/_card.html.twig
@@ -41,7 +41,9 @@
 
       <div class='d-flex justify-content-between align-items-center px-4 pt-4'>
         
-        <small><img src="https://www.svgrepo.com/show/427089/packet.svg" class="mx-2" width="20px" />email@email.com</small>
+        <small><img src="https://www.svgrepo.com/show/427089/packet.svg" class="mx-2" width="20px" />
+          {{ email }}
+        </small>
         <a href="{{ link }}{{ id }}" class='btn btn-outline-success'>
           {{ button_label|default('Go') }}  
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-right-circle ms-2" viewBox="0 0 16 16">
