--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,34 +11,25 @@
 
       {% if app.user %}
           <div class="mb-3">
-              Vous êtes connecté: {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            <p>Vous êtes connecté: {{ app.user.userIdentifier }} </p>
+            <a href="{{ path('app_logout') }} class="btn btn-lg btn-primary"">Logout</a>
           </div>
+      {% else %}
+          <h1 class="h3 mb-3 font-weight-normal">S'il vous plaît, identifiez-vous</h1>
+          <label for="inputEmail">Email</label>
+          <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+          <label for="inputPassword">Mot de passe</label>
+          <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+
+          <input type="hidden" name="_csrf_token"
+                value="{{ csrf_token('authenticate') }}"
+          >
+
+          <button class="btn btn-lg btn-primary" type="submit">
+              Se connecter
+          </button>
+
       {% endif %}
-
-      <h1 class="h3 mb-3 font-weight-normal">S'il vous plaît, identifiez-vous</h1>
-      <label for="inputEmail">Email</label>
-      <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-      <label for="inputPassword">Mot de passe</label>
-      <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-      <input type="hidden" name="_csrf_token"
-            value="{{ csrf_token('authenticate') }}"
-      >
-
-      {# 
-          Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-          See https://symfony.com/doc/current/security/remember_me.html
-
-          <div class="checkbox mb-3">
-              <label>
-                  <input type="checkbox" name="_remember_me"> Remember me
-              </label>
-          </div>
-      #} 
-
-      <button class="btn btn-lg btn-primary" type="submit">
-          Se connecter
-      </button>
   </form>
 
   <a href="{{ path('app_forgot_password_request') }}">J'ai oublié mon mot de passe</a>
